kubetest/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upi-os
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upi-os
      tier: backend
  template:
    metadata:
      labels:
        app: upi-os
        tier: backend
    spec:
      volumes:
        - name: nginx-config
          configMap:
            name: laravel-nginx-config
            items:
              - key: config
                path: default.conf
      containers:
        - name: upi-os
          image: $IMAGE_NAME:$COMMIT_SHA1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/sites-enabled
          # >>> Add secret as environment variables here
      imagePullSecrets:
        - name: registry-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: upi-os-horizon
  name: upi-os-horizon
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: upi-os-horizon
  template:
    metadata:
      labels:
        app: upi-os-horizon
    spec:
      containers:
        - name: upi-os-horizon
          ports:
            - containerPort: 8000
            - containerPort: 8080
          image: $IMAGE_NAME:$COMMIT_SHA1
          imagePullPolicy: Always
      imagePullSecrets:
        - name: registry-secret

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
      nodePort: 30090
