kubetest/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: up-os
  labels:
    tier: backend
spec:
  selector:
    app: upi-os
    tier: backend
  ports:
    - protocol: TCP
      port: 80
      name: http
