kubetest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upi-os
  annotations:
    cert-manager.io/issuer: letsencrypt-prod-tenant
    nginx.ingress.kubernetes.io/enable-modsecurity: 'true'
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: 'true'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-body-size: '100m'
    nginx.org/client-max-body-size: '100m'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - '*.banka.ng'
      secretName: wildcard-cert-tls
  rules:
    - host: '*.banka.ng'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: upi-os
                port:
                  number: 80
